Fixed mobile fontawesome icons to text align center

--- a/css/main.css
+++ b/css/main.css
@@ -199,8 +199,7 @@ input {
 /* fontawesome icons */
 .features i {
 	font-size: 3.75em;
-        margin-bottom: 40px;
-  padding-left: 80px;
+  margin-bottom: 40px;
 }
 
 /* about page */
@@ -407,6 +406,7 @@ input {
 
 article .fontawesome-icon {
   margin-top: 60px;
+  text-align: center;
 }
 
 article .features-item-description {
